# borica-py

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  settings.json  setup.py  setup111.py
borica/: __init__.py  base.py  config.py  exceptions.py  request.py  response.py
borica/config/: __init__.py  config.py  fields.py  validators.py
borica/request/: __init__.py  constants.py  fields.py  request.py
borica/response/: __init__.py  constants.py  response.py
borica/settings/: __init__.py  check_settings.py  constants.py  settings.json
borica/tests/: __init__.py  constants.py  fixtures.py  request.json  response.json  simple_server.py  test_config.py  test_request.py  test_response.py  test_runall.py
certs/: borica.pem  borica.pub
